--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon",
     "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pm2": "pm2 start ecosystem.config.json --env production ; pm2 save"
+    "pm2": "npm run build && pm2 start ecosystem.config.json --env production ; pm2 save"
   },
   "author": {
     "name": "Nicolas Bonamy",
