--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "rootDir": "./src",
     "strict": true,
     "sourceMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types"
+    ]
   }
 }
