logging and backwards compatibility

--- a/package.json
+++ b/package.json
@@ -17,20 +17,30 @@
   "dependencies": {
     "@huggingface/inference": "^2.8.1",
     "@tavily/core": "^0.0.2",
+    "config": "^3.3.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs-extra": "^11.2.0",
+    "helmet": "^8.0.0",
     "html-to-text": "^9.0.5",
+    "morgan": "^1.10.0",
     "multi-llm-ts": "^2.1.1",
     "openai": "^4.70.2",
     "portfinder": "^1.0.32",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "winston": "^3.17.0",
     "youtube-transcript": "^1.2.1",
     "ytv": "^1.0.3"
   },
   "devDependencies": {
+    "@types/config": "^3.3.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/html-to-text": "^9.0.4",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.8.6",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
