--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "winston": "^3.17.0",
+    "yaml": "^2.6.0",
     "youtube-transcript": "^1.2.1",
     "ytv": "^1.0.3"
   },
