--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc -p ./tsconfig.json",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx vitest",
+    "testui": "npx vitest --ui --coverage.enabled=true",
     "pm2": "npm run build && pm2 start ecosystem.config.json --env production ; pm2 save"
   },
   "author": {
@@ -45,6 +46,7 @@
     "@types/node": "^22.8.6",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.5"
   }
 }
