--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "./dist/index.js",
   "scripts": {
     "dev": "nodemon",
+    "lint": "eslint '**/*.ts'",
     "build": "tsc -p ./tsconfig.json",
     "test": "npx vitest",
     "testui": "npx vitest --ui --coverage.enabled=true",
+    "check": "npm run lint && npx vitest --run && npm run build",
     "pm2": "npm run build && pm2 start ecosystem.config.json --env production ; pm2 save"
   },
   "author": {
@@ -37,6 +39,7 @@
     "ytv": "^1.0.3"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.3",
     "@types/config": "^3.3.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -44,6 +47,11 @@
     "@types/html-to-text": "^9.0.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.8.6",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "eslint": "^9.14.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
