--- a/config/default.yml
+++ b/config/default.yml
@@ -15,21 +15,29 @@ models:
   basic:
     - engine: openai
       model: gpt-4o-mini
-    - engine: anthropic
-      model: claude-3-5-haiku-latest
+      label: OpenAI GPT-4o Mini
     - engine: google
       model: gemini-1.5-flash-latest
+      label: Google Gemini 1.5 Flash
     - engine: groq
       model: llama-3.1-70b-versatile
+      label: Groq Llama 3.1 70B
+    - engine: anthropic
+      model: claude-3-5-haiku-latest
+      label: Anthropic Claude 3.5 Haiku
   pro:
     - engine: openai
       model: gpt-4o
-    - engine: anthropic
-      model: claude-3-5-sonnet-latest
+      label: OpenAI GPT-4o
     - engine: google
       model: models/gemini-1.5-pro-latest
+      label: Google Gemini 1.5 Pro
     - engine: groq
       model: llama-3.2-90b-text-preview
+      label: Groq Llama 3.2 90B
+    - engine: anthropic
+      model: claude-3-5-sonnet-latest
+      label: Anthropic Claude 3.5 Sonnet
 
 chat:
   conversation:
