--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "helmet": "^8.0.0",
     "html-to-text": "^9.0.5",
     "morgan": "^1.10.0",
-    "multi-llm-ts": "^2.1.4",
+    "multi-llm-ts": "^2.3.0",
+    "node-apple-receipt-verify": "^1.13.0",
     "openai": "^4.70.2",
     "portfinder": "^1.0.32",
     "sqlite": "^5.1.1",
@@ -48,6 +49,7 @@
     "@types/html-to-text": "^9.0.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.8.6",
+    "@types/node-apple-receipt-verify": "^1.7.4",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "@vitest/coverage-v8": "^2.1.5",
