--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -9,7 +9,7 @@ server {
 
 	listen      443 ssl http2;
 	server_name api.witsyai.com;
-	root				/var/www/witsy-website;
+	root				/var/www/witsy-server;
 
 	index						index.html;
 	charset					utf-8;
