--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "npx vitest",
     "testui": "npx vitest --ui --coverage.enabled=true",
     "check": "npm run lint && npx vitest --run && npm run build",
-    "pm2": "npm run build && pm2 start ecosystem.config.json --env production ; pm2 save"
+    "pm2": "npm run build && pm2 start ecosystem.config.json --env production ; pm2 save",
+    "deploy": "npm run check && npm run pm2"
   },
   "author": {
     "name": "Nicolas Bonamy",
