--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-apple-receipt-verify": "^1.13.0",
     "openai": "^4.70.2",
     "portfinder": "^1.0.32",
+    "replicate": "^1.0.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "winston": "^3.17.0",
