--- a/config/default.yml
+++ b/config/default.yml
@@ -27,11 +27,11 @@ models:
       model: gpt-4o-mini
       label: OpenAI GPT-4o Mini
     - engine: google
-      model: gemini-1.5-flash-latest
-      label: Google Gemini 1.5 Flash
+      model: gemini-2.0-flash
+      label: Google Gemini 2.0 Flash
     - engine: groq
-      model: llama-3.1-70b-versatile
-      label: Groq Llama 3.1 70B
+      model: llama-3.2-90b-text-preview
+      label: Groq Llama 3.2 90B
     - engine: anthropic
       model: claude-3-5-haiku-latest
       label: Anthropic Claude 3.5 Haiku
@@ -43,17 +43,17 @@ models:
       model: gpt-4o
       label: OpenAI GPT-4o
     - engine: google
-      model: models/gemini-1.5-pro-latest
-      label: Google Gemini 1.5 Pro
+      model: gemini-2.5-pro-exp-03-25
+      label: Google Gemini 2.5 Pro
     - engine: groq
-      model: llama-3.2-90b-text-preview
-      label: Groq Llama 3.2 90B
+      model: llama-3.3-70b-versatile
+      label: Groq Llama 3.3 70B
     - engine: anthropic
-      model: claude-3-5-sonnet-latest
-      label: Anthropic Claude 3.5 Sonnet
+      model: claude-3-7-sonnet-20250219
+      label: Anthropic Claude 3.7 Sonnet
     - engine: xai
-      model: grok-beta
-      label: xAI Grok
+      model: grok-2-1212
+      label: xAI Grok 2
     - engine: deepseek
       model: deepseek-reasoner
       label: DeepSeek Reasoner
