--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,14 +1,21 @@
 
 server {
+    if ($host = api.witsy.bonamy.fr) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
 	listen      80;
-	server_name api.witsyai.com;
-	return      301 https://api.witsyai.com$request_uri;
+	server_name api.witsy.bonamy.fr;
+	return      301 https://api.witsy.bonamy.fr$request_uri;
+
+
 }
 
 server {
 
 	listen      443 ssl http2;
-	server_name api.witsyai.com;
+	server_name api.witsy.bonamy.fr;
 	root				/var/www/witsy-server;
 
 	index						index.html;
@@ -18,11 +25,11 @@ server {
 	# auth
 
 	# SSL certificates
-	ssl_certificate /etc/letsencrypt/live/witsyai.com/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/witsyai.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/api.witsy.bonamy.fr/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/api.witsy.bonamy.fr/privkey.pem; # managed by Certbot
 
 	# SSL Stapling
-	ssl_trusted_certificate /etc/letsencrypt/live/witsyai.com/chain.pem;
+	ssl_trusted_certificate /etc/letsencrypt/live/api.witsy.bonamy.fr/chain.pem;
 
 	# Force HTTPS
 	#add_header Strict-Transport-Security max-age=15768000;
@@ -61,4 +68,5 @@ server {
 		#expires					30d;
 		access_log	off;
 	}
+
 }
