--- a/config/default.yml
+++ b/config/default.yml
@@ -24,7 +24,7 @@ otherLimits:
 models:
   basic:
     - engine: openai
-      model: gpt-4.1--mini
+      model: gpt-4.1-mini
       label: OpenAI GPT-4.1 Mini
     - engine: google
       model: gemini-2.0-flash
